Implementation of the suggestions given by the reviewer.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="label_release_date">Release Date</string>
     <string name="label_movie_poster">Movie Poster</string>
     <string name="label_title">Title</string>
+    <string name="loading_data_error">Error loading data! Please try again later.</string>
+    <string name="no_internet_error">Sorry, without internet connection!</string>
 
     <string-array name="sort_by_readable_options">
         <item>Popularity</item>
